dist/docs/3.0.0/building/integration/authentication.mdx
---
title: Authentication
description: "AdCP authentication guide: public vs authenticated operations, bearer token implementation, and credential management for buyer and seller agents."
"og:title": "AdCP — Authentication"
---


AdCP uses a tiered authentication model where some operations are publicly accessible while others require authentication.

## When Authentication is Required

### Public Operations (No Authentication Required)

These operations work without credentials to enable discovery and evaluation:

- **`get_adcp_capabilities`** - Discover agent capabilities, portfolio, and supported features
- **`list_creative_formats`** - Browse available creative formats
- **`get_products`** - Discover inventory (returns limited results without auth)

**Rationale**: Publishers want potential buyers to discover their capabilities before establishing a business relationship.

**Important**: Unauthenticated `get_products` may return:
- Partial catalog (standard products only)
- No pricing information or CPM details
- No custom product offerings
- Generic format support only

### Authenticated Operations (Credentials Required)

These operations require valid credentials:

- **`get_products`** (full access) - Complete catalog with pricing and custom products
- **`create_media_buy`** - Create advertising campaigns
- **`update_media_buy`** - Modify existing campaigns
- **`sync_creatives`** - Upload creative assets
- **`list_creatives`** - View your creative library
- **`get_media_buy_delivery`** - Monitor campaign performance and metrics
- **`provide_performance_feedback`** - Submit optimization signals

**Rationale**: These operations involve financial commitments, access to proprietary data, or modifications to active campaigns.

## Authentication Method

AdCP supports three authentication mechanisms for authenticated operations. The choice depends on the operation's risk class and the AdCP version in use:

| Mechanism | 3.0 (current) | 3.1+ | Notes |
|---|---|---|---|
| **RFC 9421 request signing** | RECOMMENDED for all authenticated operations | **REQUIRED** for mutating / financial operations | Asymmetric, body-bound, replay-resistant. See [RFC 9421 request signing](/dist/docs/3.0.0/building/implementation/security#request-signing). |
| **Mutual TLS (mTLS)** | Permitted for any operation | Permitted as an alternative to 9421 | Transport-layer identity; recommended when the deployment already terminates mTLS at the edge. |
| **Bearer tokens** | Permitted; effective baseline for 3.0 | **PROHIBITED for mutating / financial operations**; permitted for read / discovery only | Documented sunset for mutating ops — see the [known limitation](/dist/docs/3.0.0/reference/known-limitations). |

<Warning>
  **3.0 mutating-operation floor.** Until 3.1 lands, Bearer tokens over TLS are the effective floor for mutating operations. Operators handling spend commitments SHOULD ship RFC 9421 request signing before the 3.1 deprecation date to avoid a forced cutover.
</Warning>

### Bearer tokens (3.0 baseline)

```
Authorization: Bearer <token>
```

Tokens may be:
- **Opaque tokens**: Server-validated strings mapped to agents
- **JWT tokens**: Self-contained tokens with embedded claims

Implementations MUST enforce TLS 1.2+ on all Bearer-authenticated endpoints. See the [implementation security reference](/dist/docs/3.0.0/building/implementation/security) for transport requirements.

### RFC 9421 request signing (recommended; required for mutating ops in 3.1+)

Signed requests bind `@method`, `@target-uri`, `@authority`, `content-type`, and `content-digest` under an `Ed25519`, `ecdsa-p256-sha256`, or `rsa-pss-sha512` signature with a ±60 s timestamp window and ≥128-bit nonce. The full verifier checklist, key-discovery rules (`brand.json` → `agents[]` → `jwks_uri`), and rotation semantics are defined in the [implementation security reference](/dist/docs/3.0.0/building/implementation/security#request-signing). Capability discovery via `get_adcp_capabilities.request_signing.supported` lets clients detect whether a seller enforces signing before sending a mutating call.

### mTLS

Operators terminating mTLS at the edge MAY use the peer certificate as the primary identity mechanism for AdCP operations. When mTLS is used, operators MUST pin identity to the certificate subject / SAN rather than any header field.

### JWT Token Claims

When using JWT tokens, include these standard claims:

```json
{
  "sub": "agent_123",
  "exp": 1706745600,
  "iat": 1706742000
}
```

Sales agents may require additional claims for authorization.

## Agents and Accounts

AdCP distinguishes between the **agent** (who is making requests) and the **account** (who gets billed):

- **Agent**: The authenticated entity making API calls (identified by the token)
- **Account**: The billing relationship determining rates and invoicing

An agent may have access to multiple accounts (e.g., an agency managing several clients). See [Accounts and Agents](/dist/docs/3.0.0/building/integration/accounts-and-agents) for details on account selection and billing attribution.

For schema definitions, see [`account.json`](https://adcontextprotocol.org/schemas/3.0.0/core/account.json).

## Tenant resolution

AdCP resolves tenant from the authenticated principal, not from request payloads. Seller agents map the authenticated identity (bearer token, mTLS client cert, or RFC 9421 key) to the originating buyer's account via their own authorization context. Task payloads never carry tenant identity as a substitute for authentication — when a schema requires a globally-unique resource ID (`plan_id`, `rights_id`, `standards_id`, `event_source_id`, `list_id`) rather than an `account` envelope, the seller resolves ID → tenant via the same authorization context. The authenticated principal must hold access to the referenced resource, and the resource itself carries the brand it was provisioned for; envelope identity on those calls would be redundant and, if it disagreed with the authenticated principal, a spoofing vector.

Compliance storyboards in the training agent inject envelope identity on these calls as a sandbox routing convention, because the training agent has no authenticated-principal layer of its own — see [Storyboard authoring](/dist/docs/3.0.0/contributing/storyboard-authoring). Production sellers do not require it.

## Protocol Configuration

Both MCP and A2A protocols use the same authentication header. Configure your client with:

```json
{
  "auth": {
    "type": "bearer",
    "token": "<your_token>"
  }
}
```

The client library handles adding the `Authorization: Bearer <token>` header to requests.

## MCP Client Configuration

When using the MCP protocol, authentication is handled by the transport layer, not by adding HTTP headers manually.

### Using MCP Client Libraries

The recommended approach is to use an MCP client library:

<CodeGroup>

```typescript TypeScript
import { Client } from '@modelcontextprotocol/sdk/client/index.js';
import { StreamableHTTPClientTransport } from '@modelcontextprotocol/sdk/client/streamableHttp.js';

const transport = new StreamableHTTPClientTransport(
  new URL('https://test-agent.adcontextprotocol.org/mcp'),
  {
    requestInit: {
      headers: {
        'Authorization': 'Bearer YOUR_TOKEN_HERE'
      }
    }
  }
);

const client = new Client({ name: 'my-client', version: '1.0.0' });
await client.connect(transport);
```

```python Python
from mcp import ClientSession
from mcp.client.streamable_http import streamablehttp_client

async with streamablehttp_client(
    "https://test-agent.adcontextprotocol.org/mcp",
    headers={"Authorization": "Bearer YOUR_TOKEN_HERE"}
) as (read, write):
    async with ClientSession(read, write) as session:
        await session.initialize()
```

</CodeGroup>

### Common Mistake: Raw HTTP Headers

A common mistake is trying to add authentication headers to raw HTTP requests:

```http
# This won't work for MCP endpoints
GET /mcp HTTP/1.1
Authorization: Bearer YOUR_TOKEN
```

MCP uses a streaming protocol over HTTP. The authentication must be configured in the MCP client transport layer, which handles the protocol negotiation and message framing.

### Troubleshooting Authentication

If you're getting "authentication required" errors:

1. **Verify you're using an MCP client library** - not making raw HTTP calls
2. **Check the token format** - should be passed to the transport configuration
3. **Test with the public test agent** - verify your setup works before testing custom agents
4. **Check protocol version** - ensure client and server protocol versions are compatible

## Obtaining Credentials

### Account Setup Process

To access authenticated operations, you must establish an account with each sales agent:

1. **Identify Sales Agents**: Discover sales agents via publisher `adagents.json` files
2. **Contact Sales Team**: Reach out to the agent's sales or partnerships team
3. **Complete Onboarding**: Provide business information, sign agreements, configure billing
4. **Receive Credentials**: Get API keys or OAuth client credentials

**Note**: Each sales agent manages their own accounts independently. You need separate credentials for each agent you work with.

### Dynamic Registration (Optional)

Some sales agents support OAuth 2.0 dynamic client registration:

```http
POST /oauth/register
Content-Type: application/json

{
  "client_name": "Your Company Name",
  "redirect_uris": ["https://yourapp.com/callback"],
  "grant_types": ["authorization_code", "refresh_token"],
  "scope": "adcp:products adcp:media_buys adcp:creatives"
}
```

Check the sales agent's documentation or `adagents.json` for dynamic registration support.

### Aggregation Platforms

Consider using aggregation platforms (like Scope3) that manage credentials and relationships with multiple sales agents on your behalf. This simplifies:
- Credential management
- Financial relationships
- Legal agreements
- Compliance monitoring

## Error Responses

### Unauthenticated Request to Protected Operation

```json
{
  "error": {
    "code": "AUTH_REQUIRED",
    "message": "Authentication required for this operation"
  }
}
```

### Invalid or Expired Credentials

```json
{
  "error": {
    "code": "AUTH_INVALID",
    "message": "Invalid or expired credentials"
  }
}
```

### Insufficient Permissions

```json
{
  "error": {
    "code": "INSUFFICIENT_PERMISSIONS",
    "message": "Agent does not have required permissions for this operation"
  }
}
```

## Best Practices

1. **Secure Storage**: Store credentials securely (environment variables, secret managers)
2. **Rotation**: Implement credential rotation policies
3. **Scope Limitation**: Request minimum required permissions
4. **Token Refresh**: Implement automatic token refresh for JWT tokens
5. **Error Handling**: Handle authentication errors gracefully with retry logic

## Testing Authentication

The public test agent accepts a shared token — no signup required:

```bash
export ADCP_AUTH_TOKEN="1v8tAhASaUYYp4odoQ1PnMpdqNaMiTrCRqYo9OJp6IQ"
export AGENT_URL="https://test-agent.adcontextprotocol.org/mcp"
```

Configure your client with this token:

```json
{
  "agent_uri": "https://test-agent.adcontextprotocol.org/mcp",
  "protocol": "mcp",
  "auth": {
    "type": "bearer",
    "token": "1v8tAhASaUYYp4odoQ1PnMpdqNaMiTrCRqYo9OJp6IQ"
  }
}
```

For org-scoped usage tracking, replace the public token with your own API key from the [AAO dashboard](https://agenticadvertising.org/dashboard/api-keys).

See [Sandbox Mode](/dist/docs/3.0.0/media-buy/advanced-topics/sandbox) for testing capabilities including sandbox mode for risk-free development.